Changed padding style to fix article page overflow when opening on mobile devices

--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -61,6 +61,7 @@
     padding: 20px;
     width: 100%;
     max-width: 1024px;
+    overflow: auto;
 }
 
 .drawer {
